
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ uint32_t ;
struct RTPMessage {int dummy; } ;
struct JitterBuffer {unsigned int top; unsigned int bottom; unsigned int size; scalar_t__ capacity; struct RTPMessage** queue; } ;
typedef int int32_t ;



__attribute__((used)) static struct RTPMessage *jbuf_read(struct JitterBuffer *q, int32_t *success)
{
    if (q->top == q->bottom) {
        *success = 0;
        return ((void*)0);
    }

    unsigned int num = q->bottom % q->size;

    if (q->queue[num]) {
        struct RTPMessage *ret = q->queue[num];
        q->queue[num] = ((void*)0);
        ++q->bottom;
        *success = 1;
        return ret;
    }

    if ((uint32_t)(q->top - q->bottom) > q->capacity) {
        ++q->bottom;
        *success = 2;
        return ((void*)0);
    }

    *success = 0;
    return ((void*)0);
}
